{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 248,
  "lineage": "99563dcb-aff3-443d-200f-7da0cd7375a2",
  "resources": [
    {
      "module": "module.runners.module.runners",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "runner_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:security-group/sg-0b8ca3dd81c127a80",
            "description": "Github Actions Runner security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8ca3dd81c127a80",
            "ingress": [],
            "name": "ce-ci-github-actions-runner-sg20211026030243699600000002",
            "name_prefix": "ce-ci-github-actions-runner-sg",
            "owner_id": "052730242331",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-action-runner",
              "Site": "CompilerExplorer"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-action-runner",
              "Site": "CompilerExplorer"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07f2e2f6a136dcfdc",
            "domain": "vpc",
            "id": "eipalloc-041748d38fc135d4e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f25ef293fe31c45d",
            "private_dns": "ip-10-0-0-114.ec2.internal",
            "private_ip": "10.0.0.114",
            "public_dns": "ec2-34-239-234-200.compute-1.amazonaws.com",
            "public_ip": "34.239.234.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:internet-gateway/igw-08a85622aab0938b1",
            "id": "igw-08a85622aab0938b1",
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041748d38fc135d4e",
            "connectivity_type": "public",
            "id": "nat-07fb59cd4f23d0388",
            "network_interface_id": "eni-0f25ef293fe31c45d",
            "private_ip": "10.0.0.114",
            "public_ip": "34.239.234.200",
            "subnet_id": "subnet-042f1fd7f1a6a2d79",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bdcdeebf772cae6a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07fb59cd4f23d0388",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bdcdeebf772cae6a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.private_routetable",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08a85622aab0938b1",
            "id": "r-rtb-06cee837e10cb353f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cee837e10cb353f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_routetable",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:route-table/rtb-0bdcdeebf772cae6a",
            "id": "rtb-0bdcdeebf772cae6a",
            "owner_id": "052730242331",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07fb59cd4f23d0388",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc",
              "Project": ""
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc",
              "Project": ""
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:route-table/rtb-06cee837e10cb353f",
            "id": "rtb-06cee837e10cb353f",
            "owner_id": "052730242331",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08a85622aab0938b1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc",
              "Project": ""
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc",
              "Project": ""
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040c23246cd247bf4",
            "route_table_id": "rtb-0bdcdeebf772cae6a",
            "subnet_id": "subnet-0ef993164c44a1c18"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routetable",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d04f359b3ab836f9",
            "route_table_id": "rtb-0bdcdeebf772cae6a",
            "subnet_id": "subnet-075bb57483ebd0f6c"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private_routetable",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0904597e44828c793",
            "route_table_id": "rtb-0bdcdeebf772cae6a",
            "subnet_id": "subnet-0ddab5d8f1c2fd712"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private_routetable",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d75fdb90945e1a80",
            "route_table_id": "rtb-0bdcdeebf772cae6a",
            "subnet_id": "subnet-029017fff2b237e4d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routetable",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c27dad6a99826bf4",
            "route_table_id": "rtb-0bdcdeebf772cae6a",
            "subnet_id": "subnet-082b20ca19dc7b0bc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private_routetable",
            "module.vpc.aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c9a3c5aa9f00937",
            "route_table_id": "rtb-0bdcdeebf772cae6a",
            "subnet_id": "subnet-02d404b9f5f6e7b7e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routetable",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routing_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b836f94b63c7455",
            "route_table_id": "rtb-06cee837e10cb353f",
            "subnet_id": "subnet-042f1fd7f1a6a2d79"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_routetable",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c430b849bab6b25",
            "route_table_id": "rtb-06cee837e10cb353f",
            "subnet_id": "subnet-0e4fe699df0a84e20"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_routetable",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1317f1aa5de974d",
            "route_table_id": "rtb-06cee837e10cb353f",
            "subnet_id": "subnet-005aa0e617d96a40e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_routetable",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da0122da151b649a",
            "route_table_id": "rtb-06cee837e10cb353f",
            "subnet_id": "subnet-0d685bcc3ba625ef0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_routetable",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc711f4e6bac297d",
            "route_table_id": "rtb-06cee837e10cb353f",
            "subnet_id": "subnet-028a17ea1fb7d6785"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public_routetable",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003f5dd6d5dcbf6c9",
            "route_table_id": "rtb-06cee837e10cb353f",
            "subnet_id": "subnet-0992bbcffbef706d9"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public_routetable",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-0ef993164c44a1c18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0ef993164c44a1c18",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1a-private",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1a-private",
              "Tier": "private"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-075bb57483ebd0f6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-075bb57483ebd0f6c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1b-private",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1b-private",
              "Tier": "private"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-0ddab5d8f1c2fd712",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0ddab5d8f1c2fd712",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1c-private",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1c-private",
              "Tier": "private"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-029017fff2b237e4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-029017fff2b237e4d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1d-private",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1d-private",
              "Tier": "private"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-082b20ca19dc7b0bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-082b20ca19dc7b0bc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1e-private",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1e-private",
              "Tier": "private"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-02d404b9f5f6e7b7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-02d404b9f5f6e7b7e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1f-private",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1f-private",
              "Tier": "private"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-042f1fd7f1a6a2d79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-042f1fd7f1a6a2d79",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1a-public",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1a-public",
              "Tier": "public"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-0e4fe699df0a84e20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e4fe699df0a84e20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1b-public",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1b-public",
              "Tier": "public"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-005aa0e617d96a40e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-005aa0e617d96a40e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1c-public",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1c-public",
              "Tier": "public"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-0d685bcc3ba625ef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d685bcc3ba625ef0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1d-public",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1d-public",
              "Tier": "public"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-028a17ea1fb7d6785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-028a17ea1fb7d6785",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1e-public",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1e-public",
              "Tier": "public"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:subnet/subnet-0992bbcffbef706d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0992bbcffbef706d9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1f-public",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-us-east-1f-public",
              "Tier": "public"
            },
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:vpc/vpc-04ab1da9ffa64bb53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0da9c8d98f61bdb",
            "default_route_table_id": "rtb-07bc6f7437c0e3c9c",
            "default_security_group_id": "sg-0544c7551a0066929",
            "dhcp_options_id": "dopt-4a2c3128",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ab1da9ffa64bb53",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07bc6f7437c0e3c9c",
            "owner_id": "052730242331",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:052730242331:vpc-endpoint/vpce-0fcfaa9c687d59785",
            "cidr_blocks": [
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19"
            ],
            "id": "vpce-0fcfaa9c687d59785",
            "owner_id": "052730242331",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06cee837e10cb353f",
              "rtb-0bdcdeebf772cae6a"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            },
            "tags_all": {
              "Environment": "ce-ci",
              "Name": "ce-ci-vpc"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04ab1da9ffa64bb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc_endpoint_service.s3"
          ]
        }
      ]
    }
  ]
}